--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,16 @@
-language: java
-before_script: cd TBI-GUI
-script:
-  - gradle test
+matrix:
+  include:
+  - language: java
+    before_script: cd TBI-GUI
+    script:
+      - gradle test
+  - language: python
+    python:
+      - '3.6'
+    install:
+      - pip install pydicom
+      - pip install numpy
+      - pip install tensorflow
+    before_script: cd BSSCSFramework
+    script:
+      - dicom_test_cases.py
