Update Gradle to work with JUNIT tests

--- a/TBI-GUI/build.gradle
+++ b/TBI-GUI/build.gradle
@@ -49,7 +49,7 @@ repositories {
 dependencies {
 	compile 'com.io7m.xom:xom:1.2.+'
 	compile 'net.sourceforge.nekohtml:nekohtml:1.9.+'
-	testImplementation 'junit:junit:4.12'
+	compile 'junit:junit:4.12'
 }
 
 task wrapper (type: Wrapper) {
