--- a/TBI-GUI/build.gradle
+++ b/TBI-GUI/build.gradle
@@ -31,6 +31,13 @@ compileJava.doLast {
 }
 
 sourceSets.main.java.srcDirs = ['src']
+sourceSets {
+	test {
+		java {
+			srcDirs = ['src/tests']
+		}
+	}
+}
 
 test {
 	useJUnit()
