--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ matrix:
   include:
   - language: java
     before_script:
-      sudo apt-get install libgdcm2.8
       cd TBI-GUI
     script:
       - gradle test
@@ -10,8 +9,6 @@ matrix:
     python:
       - '3.6'
     install:
-      - sudo apt-get install libgdcm2.4
-      - sudo apt-get install libgdcm-tools
       - pip install pydicom
       - pip install numpy
       - pip install tensorflow
@@ -19,7 +16,13 @@ matrix:
       - pip install dicom2nifti
       - pip install nibabel
       - pip install pillow
-    before_script: cd BSSCSFramework
+      - curl -sL https://github.com/malaterre/GDCM/archive/v2.8.8.tar.gz | tar xz
+      - cd GDCM-2.8.8
+      - mkdir gdcm-build
+      - cmake .
+      - make
+    before_script:
+      - cd ../BSSCSFramework
     script:
       - python3 data_proc_tests.py
       - python3 CTConverter/conversion_test_cases.py
