removing tests from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,13 @@ matrix:
       - pip install dicom2nifti
       - pip install nibabel
       - pip install pillow
-      - curl -sL https://github.com/malaterre/GDCM/archive/v2.8.8.tar.gz | tar xz
-      - cd GDCM-2.8.8
-      - mkdir gdcm-build
-      - cmake .
-      - make
+      #- curl -sL https://github.com/malaterre/GDCM/archive/v2.8.8.tar.gz | tar xz
+      #- cd GDCM-2.8.8
+      #- mkdir gdcm-build
+      #- cmake .
+      #- make
     before_script:
-      - cd ../BSSCSFramework
+      - cd BSSCSFramework
     script:
       - python3 data_proc_tests.py
-      - python3 CTConverter/conversion_test_cases.py
+      #- python3 CTConverter/conversion_test_cases.py
