--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,6 @@ matrix:
     script:
       - python3 data_proc_tests.py
       - python3 cnn_tests.py
+      - python3 classifier_tests.py
       - python3 auto_encoder_tests.py
 
