Fix path to resources file for gradle to grab images

--- a/TBI-GUI/build.gradle
+++ b/TBI-GUI/build.gradle
@@ -32,6 +32,13 @@ compileJava.doLast {
 
 sourceSets.main.java.srcDirs = ['src']
 sourceSets {
+	main {
+		resources {
+			srcDirs = ['src']
+		}
+	}
+}
+sourceSets {
 	test {
 		java {
 			srcDirs = ['src/tests']
