--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
       - pip install retrying
       - pip install dicom2nifti
       - pip install nibabel
+      - pip install pandas
       - pip install pillow
       #- curl -sL https://github.com/malaterre/GDCM/archive/v2.8.8.tar.gz | tar xz
       #- cd GDCM-2.8.8
