travis fixes until full model can be found

--- a/TBI-GUI/build.gradle
+++ b/TBI-GUI/build.gradle
@@ -64,4 +64,5 @@ dependencies {
 	compile 'com.io7m.xom:xom:1.2.+'
 	compile 'net.sourceforge.nekohtml:nekohtml:1.9.+'
 	compile 'junit:junit:4.12'
+	compile 'org.tensorflow.tensorflow.1.10+'
 }
