--- a/TBI-GUI/.classpath
+++ b/TBI-GUI/.classpath
@@ -12,5 +12,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Users/julia/Jars/libtensorflow-1.12.0.jar"/>
+	<classpathentry kind="lib" path="build/libs/libtensorflow-1.12.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
