--- a/TBI-GUI/build.gradle
+++ b/TBI-GUI/build.gradle
@@ -61,6 +61,7 @@ repositories {
 }
 
 dependencies {
+	compile fileTree(dir: 'build/libs', include: ['*.jar'])
 	compile 'com.io7m.xom:xom:1.2.+'
 	compile 'net.sourceforge.nekohtml:nekohtml:1.9.+'
 	compile 'junit:junit:4.12'
